--- a/Frontend/src/Components/About.css
+++ b/Frontend/src/Components/About.css
@@ -62,16 +62,35 @@
   transform: translateY(-2px);
 }
 
+@media (max-width: 800px) {
 
-@media (max-width: 600px) {
-  .about-buttons-container {
+  .about-section-container {
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+  }
+
+  .about-section-text-container {
     width: 100%;
+    text-align: center;
+    margin-top: 0px !important;
+  }
+
+  .about-buttons-container {
+    flex-direction: column;  
+    width: 100%;
+    align-items: center;
   }
 
   .discover-btn,
   .watch-video-button {
-    width: 100%;
+    width: 90%;             
+    max-width: 300px;
     justify-content: center;
+  }
+  .about-background-image-container{
+  /* visibility: hidden; */
+  /* height: auto; */
   }
 }
